created test unit for entrypoint classes